--- a/app/assets/stylesheets/pattarns/pattarn_shared.css
+++ b/app/assets/stylesheets/pattarns/pattarn_shared.css
@@ -8,8 +8,8 @@
 
 .patterns-page-main{
   background-color: #f7edde;
-  width: 100% ;
-  height: 100vh;
+  width: 100vw;
+  height: calc(100% - 80px);
 }
 
 /*       header        */
